---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/invalid/statements/gate_applications.qasm
expect-parse: Diag
--- parser ---
ok: false
panicked: false
errors: 37
--- ast ---
SOURCE_FILE@0..277: // lex: ok
// parse: diag
// sema: skip

U (1)(2) $0;
notmodifier @ x $0;
pow @ x $0;
pow(2, 3) @ x $0;
ctrl(2, 3) @ x $0, $1;
negctrl(2, 3) @ x $0, $1;
inv(1) @ ctrl @ x $0, $1;

// Global phase is defined in the grammar to be the last modifier.
gphase(pi) @ ctrl @ x $0, $1;

EXPR_STMT@41..53: U (1)(2) $0;
GATE_CALL_EXPR@41..52: U (1)(2) $0
CALL_EXPR@41..46: U (1)
IDENTIFIER@41..42: U
ARG_LIST@43..46: (1)
EXPRESSION_LIST@43..46: (1)
LITERAL@44..45: 1
ARG_LIST@46..49: (2)
EXPRESSION_LIST@46..49: (2)
LITERAL@47..48: 2
QUBIT_LIST@50..52: $0
HARDWARE_QUBIT@50..52: $0
EXPR_STMT@54..65: notmodifier
IDENTIFIER@54..65: notmodifier
ERROR@66..67: @
EXPR_STMT@68..73: x $0;
GATE_CALL_EXPR@68..72: x $0
IDENTIFIER@68..69: x
QUBIT_LIST@70..72: $0
HARDWARE_QUBIT@70..72: $0
EXPR_STMT@74..85: pow @ x $0;
MODIFIED_GATE_CALL_EXPR@74..84: pow @ x $0
POW_MODIFIER@74..79: pow @
GATE_CALL_EXPR@80..84: x $0
IDENTIFIER@80..81: x
QUBIT_LIST@82..84: $0
HARDWARE_QUBIT@82..84: $0
EXPR_STMT@86..91: pow(2
MODIFIED_GATE_CALL_EXPR@86..91: pow(2
POW_MODIFIER@86..91: pow(2
PAREN_EXPR@89..91: (2
LITERAL@90..91: 2
GATE_CALL_EXPR@91..91: 
IDENTIFIER@91..91: 
QUBIT_LIST@91..91: 
ERROR@91..92: ,
EXPR_STMT@93..94: 3
LITERAL@93..94: 3
ERROR@94..95: )
ERROR@96..97: @
EXPR_STMT@98..103: x $0;
GATE_CALL_EXPR@98..102: x $0
IDENTIFIER@98..99: x
QUBIT_LIST@100..102: $0
HARDWARE_QUBIT@100..102: $0
EXPR_STMT@104..110: ctrl(2
MODIFIED_GATE_CALL_EXPR@104..110: ctrl(2
CTRL_MODIFIER@104..110: ctrl(2
PAREN_EXPR@108..110: (2
LITERAL@109..110: 2
GATE_CALL_EXPR@110..110: 
IDENTIFIER@110..110: 
QUBIT_LIST@110..110: 
ERROR@110..111: ,
EXPR_STMT@112..113: 3
LITERAL@112..113: 3
ERROR@113..114: )
ERROR@115..116: @
EXPR_STMT@117..126: x $0, $1;
GATE_CALL_EXPR@117..125: x $0, $1
IDENTIFIER@117..118: x
QUBIT_LIST@119..125: $0, $1
HARDWARE_QUBIT@119..121: $0
HARDWARE_QUBIT@123..125: $1
EXPR_STMT@127..136: negctrl(2
MODIFIED_GATE_CALL_EXPR@127..136: negctrl(2
NEG_CTRL_MODIFIER@127..136: negctrl(2
PAREN_EXPR@134..136: (2
LITERAL@135..136: 2
GATE_CALL_EXPR@136..136: 
IDENTIFIER@136..136: 
QUBIT_LIST@136..136: 
ERROR@136..137: ,
EXPR_STMT@138..139: 3
LITERAL@138..139: 3
ERROR@139..140: )
ERROR@141..142: @
EXPR_STMT@143..152: x $0, $1;
GATE_CALL_EXPR@143..151: x $0, $1
IDENTIFIER@143..144: x
QUBIT_LIST@145..151: $0, $1
HARDWARE_QUBIT@145..147: $0
HARDWARE_QUBIT@149..151: $1
EXPR_STMT@153..160: inv(1) 
MODIFIED_GATE_CALL_EXPR@153..160: inv(1) 
INV_MODIFIER@153..156: inv
GATE_CALL_EXPR@156..160: (1) 
IDENTIFIER@156..156: 
ARG_LIST@156..159: (1)
EXPRESSION_LIST@156..159: (1)
LITERAL@157..158: 1
QUBIT_LIST@160..160: 
ERROR@160..161: @
EXPR_STMT@162..178: ctrl @ x $0, $1;
MODIFIED_GATE_CALL_EXPR@162..177: ctrl @ x $0, $1
CTRL_MODIFIER@162..168: ctrl @
GATE_CALL_EXPR@169..177: x $0, $1
IDENTIFIER@169..170: x
QUBIT_LIST@171..177: $0, $1
HARDWARE_QUBIT@171..173: $0
HARDWARE_QUBIT@175..177: $1
EXPR_STMT@247..257: gphase(pi)
G_PHASE_CALL_EXPR@247..257: gphase(pi)
PAREN_EXPR@253..257: (pi)
IDENTIFIER@254..256: pi
ERROR@258..259: @
EXPR_STMT@260..276: ctrl @ x $0, $1;
MODIFIED_GATE_CALL_EXPR@260..275: ctrl @ x $0, $1
CTRL_MODIFIER@260..266: ctrl @
GATE_CALL_EXPR@267..275: x $0, $1
IDENTIFIER@267..268: x
QUBIT_LIST@269..275: $0, $1
HARDWARE_QUBIT@269..271: $0
HARDWARE_QUBIT@273..275: $1
